<resources>
    <!-- Strings del menu Inicio -->
    <string name="app_name">AlojamientosEuskadi</string>
    <string name="descripcion_foto">Descripcion FOTO</string>
    <string name="eslogan_aqui">ESLOGAN AQUI</string>

    <!-- Strings del menu ActionBAr -->
    <string name="opcion_menu1">Ver alojamientos</string>
    <string name="opcion_menu2">Ver reservas</string>
    <string name="opcion_menu3">Mapa</string>
    <string name="opcion_menu4">Acerca de</string>
    <string name="opcion_menu5">Cerrar sesión</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_registrarse">Registarse</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Introduzca un usuario</string>
    <string name="invalid_password">Introduzca una contraseña</string>
    <string name="invalid_password2">La contraseña no es correcta</string>
    <string name="login_failed">"Error en el Login"</string>
    <string name="usuario_registrado">"El usuario se registró correctamente "</string>
    <string name="mensaje_rellenar">"Debe rellenar los campos para continuar"</string>
    <string name="mensaje_registro">"El registo se realizó correctamente"</string>

    <string name="salir">"Salir"</string>

    <!-- Strings related to HacerReserva -->
    <string name="atras">"Atrás"</string>
    <string name="reservar">"Reservar"</string>
    <string name="tituloHacerReserv">"Seleccione los detalles de su reserva"</string>
    <string name="date">"Fecha"</string>
    <string name="strFechaEntrada">"Fecha de entrada:"</string>
    <string name="strFechaSalida">"Fecha de salida:"</string>

    <!-- Strings related to HacerReserva: fechas -->
    <string name="toastErrorFecha1">"Debe introducir una fecha de entrada."</string>
    <string name="toastErrorFecha2">"Debe introducir una fecha de salida."</string>
    <string name="toastErrorFecha3">"La fecha de entrada no puede ser anterior a la fecha actual."</string>

    <!-- Strings related to VerAlojamientos -->

    <!-- Strings related to Mapa -->
    <string name="miPosicion">"Mi posición"</string>
    <string name="miQuinceKm">"Ver 15Km"</string>
    <string name="miDiezKm">"Ver 10 Km"</string>
    <string name="marcador">"Ver 5Km"</string>

    <!-- Strings related to Registro -->
    <string name="tituloRegistro">"Introduzca sus datos"</string>
    <string name="tituloDatosUsu">"Datos de usuario:"</string>
    <string name="dni">"DNI con letra: "</string>
    <string name="contrasena1">"Contraseña: "</string>
    <string name="contrasena2">"Repita su contraseña: "</string>

    <string name="tituloDatosPer">"Datos personales:"</string>
    <string name="nombre">"Nombre: "</string>
    <string name="apellidos">"Apellidos: "</string>
    <string name="telf">"Teléfono: "</string>
    <string name="email">"Email: "</string>
    <string name="registrarse">"Registrarse "</string>
    <string name="cancelar">"Cancelar "</string>
    <string name="msjUsuarioRegis">"Usuario registrado "</string>

    <string name="msjError">"Debe rellenar todos los campos para continuar "</string>
    <string name="msjErrorUsu">"El usuario introducido ya existe. "</string>
    <string name="msjErrorContr">"Las contraseñas deben ser iguales "</string>

    <!-- Strings related to verreserva -->
    <string name="tituloVerReserv">"Detalles de su reserva"</string>
    <string name="tituloVerReserv2">"Detalles de la reserva"</string>
    <string name="tituloVerReserv3">"Detalles del usuario"</string>
    <string name="tituloVerReserv4">"Detalles del alojamiento"</string>
    <string name="titulocodigo">"Código de la reserva:"</string>
    <string name="fechaRealiz">"Fecha:"</string>
    <string name="del">"Del:"</string>
    <string name="al">"al:"</string>
    <string name="dniUsu">"DNI:"</string>
    <string name="nombreusu">"Nombre:"</string>
    <string name="apellidosusu">"Apellidos:"</string>
    <string name="telfusu">"Teléfono:"</string>
    <string name="borrar">"Borrar"</string>

    <string name="atencion">"Atención"</string>
    <string name="preguntaBorrar">"Si pulsa borrar su reserva se borrará permanentemente"</string>
    <string name="aceptar">"Borrar"</string>

    <string name="msjEliminado">"Su reserva se eliminó correctamente"</string>

</resources>
